src/components/Templates/Diptych/Diptych.scss
//----------------------------------
// Diptych-card-styles
//----------------------------------
.qui .qui-diptych-card {
  min-height: 30em;
  background-color: #ffffff;
  padding: 1.5em;
  border-radius: 1em;
  .qui-side-header {
    width: 10em;
  }
  .qui-title-block {
    min-width: 12em;
    min-height: 10em;
  }
  .qui-title {
    font-size: 1.5em;
    padding: 0 0 0.2em 0;
  }
  .qui-sub-title {
    font-size: 1em;
  }
  .qui-block-text {
    font-weight: 100;
  }
  .qui-text-block-area {
    width: auto;
    margin: 0.5em 0 0 0;
  }
  .qui-diptych-image {
    width: 99%;
    border-radius: 1em;
    max-height: 13em;
    filter: drop-shadow(0px 5px 2px #a09797);
  }
  .qui-clicked-on-image {
    width: inherit;
  }
  .qui-diptych-clickable-images {
    display: flex;
    align-items: center;
    flex-direction: row;
    margin: 1em 0em;
    filter: drop-shadow(0px 5px 2px #a09797);
  }
  .qui-clickable-image-container {
    width: 50%;
  }
  .qui-clickable-image {
    height: 11em;
  }
  .qui-clickable-image-container:first-child {
    margin-right: 0.2em;
    img {
      border-top-left-radius: 0.5em;
      border-bottom-left-radius: 0.5em;
    }
  }
  .qui-clickable-image-container:last-child {
    margin-left: 0.2em;
    img {
      border-top-right-radius: 0.5em;
      border-bottom-right-radius: 0.5em;
    }
  }
}

//-----------------------------------------
// Diptych presenter styles
//-----------------------------------------
.qui-diptych-presenter-container {
  border-radius: 1em;
  padding: 1.5em;
  position: relative;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  .qui-diptych-clickable-images {
    display: flex;
    align-items: center;
    flex-direction: row;
    margin: 0em 0em 1em 0em;
    filter: drop-shadow(0px 5px 2px #302f2f8e);
  }
  .qui-clickable-image-container {
    width: 50%;
  }
  .qui-clickable-image {
    height: 11em;
  }
  .qui-clickable-image-container:first-child {
    margin-right: 0.2em;
    img {
      border-top-left-radius: 0.5em;
      border-bottom-left-radius: 0.5em;
    }
  }
  .qui-clickable-image-container:last-child {
    margin-left: 0.2em;
    img {
      border-top-right-radius: 0.5em;
      border-bottom-right-radius: 0.5em;
    }
  }
  .qui-diptych-presenter-title {
    .qui-text-block-area {
      width: 90%;
      margin: 0 1em 0 0em;
      text-align: left;
      font-weight: bolder;
      font-size: 1.4em;
      .qui-block-text {
        padding: 0.2em;
        transform: scaleY(1.3);
      }
    }
  }
  .qui-diptych-presenter-sub-title {
    .qui .qui-text-block-area {
      width: 70%;
      margin: 0 1em 0 0em;
      text-align: left;
      font-size: 1em;
      .qui-block-text {
        padding: 0.2em;
        transform: scaleY(1.2);
        font-weight: lighter;
      }
    }
  }
  .qui-diptych-presenter-caption {
    .qui-text-block-area {
      margin: 0 1em 0 0em;
      text-align: left;
      font-size: 1em;
      z-index: 1;
      width: 44vw;
      .qui-block-text {
        padding: 0.2em;
        margin: 1em 0em;
        transform: scaleY(1.2);
        font-weight: lighter;
      }
    }
  }
  .qui-text-block-tringle {
    .qui-arrow-right-bottom {
      z-index: 1;
      right: 0.1em;
    }
  }
}
.qui-diptych-presenter-clickable-images {
  display: flex;
  align-items: center;
  flex-direction: row;
  margin: 1em 0em;
  filter: drop-shadow(0px 5px 2px #a09797);
}

@media only screen and (min-width: 320px) {
  .qui .qui-diptych-card {
    .qui-clickable-image {
      height: 12em;
    }
  }
  .qui-diptych-presenter-container {
    .qui-clickable-image {
      height: 12em;
    }
    .qui-text-block-area {
      font-weight: lighter;
      font-size: 1em;
    }
  }
  .qui-diptych-presenter {
    position: absolute;
    bottom: 0;
    right: 0;
    height: 12em;
  }
}
@media only screen and (min-width: 481px) {
  .qui .qui-diptych-card,
  .qui-diptych-presenter-container {
    width: 22em;
  }
  .qui-diptych-image {
    border-radius: 1em;
    max-height: 16em;
  }
  .qui-diptych-presenter-container {
    .qui-clickable-image {
      height: 13em;
    }
    .qui-diptych-presenter-caption .qui-text-block-area {
      width: 14em;
    }
  }
  .qui-diptych-presenter {
    position: absolute;
    bottom: 0;
    right: 0;
    height: 14em;
  }
  .qui .qui-diptych-card {
    .qui-clickable-image {
      height: 13em;
    }
  }
}

